--- a/static/templates/fs.tmpl
+++ b/static/templates/fs.tmpl
@@ -8,7 +8,8 @@
         <input type="hidden" name="did" value="{{.Did}}">
         <select style="height:31px" name="ext">
         {{range $val := .FileExtensions}}
-            <option value="(?i)\.{{$val}}$">{{$val}}</option>
+            {{/* the val here is file extension, e.g. .png, therefore we only escape leading dot and add cas-insensitive pattern */}}
+            <option value="(?i)\{{$val}}$">{{$val}}</option>
         {{ end }}
         </select>
         &nbsp;
